--- a/Osnova/log.conf
+++ b/Osnova/log.conf
@@ -1,1 +1,1 @@
-2024-12-16 23:01:13   критичная  Fun: set_File_Log. Файла с журналом ошибок открыть невозможно.
+2023-12-09 22:22:53   критичная  Fun: set_address. Адрес сервера не соответствует разрешенным.
